[project]
name = "repo-md"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
repo-md = "repo_md.__main__:main"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".venv",
    ".git",
]

[tool.ruff.lint]
select = ["E", "F", "W", "S", "N", "I", "ARG"]

[tool.ruff.format]
quote-style = "single"
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
